--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,9 @@
 {
   "name": "chromeapp-modern",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "core-elements": "Polymer/core-elements#~0.3.3",
+    "paper-elements": "Polymer/paper-elements#~0.3.3"
+  },
   "devDependencies": {}
 }
